--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/_items_listing.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/_items_listing.html.erb
@@ -14,7 +14,9 @@
 	<td><%= item.description %></td> 
 	<td><%= image_tag(item.image_path, size:"100", alt:item.name, class:"item") %></td> 
 	<td><%= item.category %></td> 
-	<td><%= item.condition %></td> 
+	<td><%= item.condition_qual %></td> 
+	<td>Location TBD</td> 
+	<td><%= item.tags %></td> 
 </tr>
 <% end %>
 
