--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/show.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Items#show</h1>
-<p>Find me in app/views/items/show.html.erb</p>
+<h1>Item view: <%= @item.name %><h1>
+	<ul>
+	<li>Description: <%= @item.description %></li> 
+	<li><%= image_tag(@item.image_path, size:"100", alt:@item.name, class:"item") %></li> 
+	<li>Category: <%= @item.category %></li> 
+	<li>Condition: <%= @item.condition_qual %></li> 
+	<li>Location TBD</li> 
+	<li>Tags: <%= @item.tags %></li>
+</ul>
