--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/layouts/application.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/layouts/application.html.erb
@@ -10,7 +10,24 @@
   <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
 
+<div class="container">
+<div style ="text-align:right">
+<% if user_signed_in? %>
+
+Signed in as <%= current_user.email %>
+<%=link_to "Edit Profile", edit_user_registration_path %>
+<%= link_to "Logout", destroy_user_session_path, method: :delete %>
+
+<% else %>
+<h1><%= link_to "Sign Up", new_user_registration_path %>
+	<%= link_to "Sign In", new_user_session_path %>
+</h1>
+
+<% end %>
+
+</div>
 <%= yield %>
+</div>
 
 </body>
 </html>
