Fixed problem with Items table.  updated condition_qual method

--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/new.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/new.html.erb
@@ -12,7 +12,8 @@
   </div>
 <div>
     <%= f.label "Item Category" %>
-    <%= f.text_field :category %>
+    <%= f.collection_select(:category_id, Category.all, :id, :name ) %>
+
   </div>
 
   <div>
