more work on Loans controller, loans partial view.  bout 15% done, maybe?

--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/index.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/index.html.erb
@@ -1,4 +1,4 @@
-<div id ="index" class = "listing">
+<div id ="items_index" class = "listing">
 <h1>Welcome to Borrow.it!<br>
 
 Enter your postal code to search for items nearby.
@@ -13,6 +13,8 @@ Enter your postal code to search for items nearby.
 <% end %>
 
 
+
+<p>
 <%= link_to "Create a new item", new_item_path %>
 
 
