--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css
@@ -30,4 +30,4 @@ td {padding:5px; font-size: 12px; border: 2px solid black; font-weight: lighter;
 
 .center_text {color:yellow;}
 
-#index {position: relative;}
+#items_index {position: relative;}
