--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/_items_listing.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/_items_listing.html.erb
@@ -1,7 +1,7 @@
-<div id = "all_items" class = "listing">
+<div id = "items" class = "listing">
 <h1> This is the listing of all items<h2>
 
-<table id = "items_listing">
+<table id = "items">
 	<th>Item Name</th>
 	<th>Description</th>
 	<th>Image</th>
