--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/index.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/index.html.erb
@@ -1,9 +1,12 @@
+<h1>Greetings, <%= current_user.first_name %></h1>
+<h2>Here are your loans, my friend:</h2>
+
+
+
+<%= render 'loans_listing' %>
 
 <%= flash[:notice] %>
 <% @loans.each do |loan| %>
-<%= loan.inspect %>
-<% if loan.lender_id == current_user.id %>
-	<%= link_to "approve loan" , approve_loan_path(loan) if loan.start_date == nil %>
-<% end %>
+	<%= loan.inspect %>
+	<% end %>
 </br>
-<% end %>
