--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/_items_listing.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/_items_listing.html.erb
@@ -9,7 +9,6 @@
 	<th>Condition</th>
 	<th>Location</th>
 	<th>Tags</th>
-	<th>Borrow</th>
 
 <% @items.each do |item| %>
 <tr>
@@ -20,7 +19,7 @@
 	<td><%= item.condition_qual %></td> 
 	<td>Location TBD</td> 
 	<td><%= item.tags %></td> 
-	<td><%= item.tags %></td> 
+	<td><%= link_to "Request this item", new_item_loan_path(item.id) %></td>
 </tr>
 <% end %>
 </table>
