--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css
@@ -24,10 +24,10 @@ th {padding: 20px; font-size: 14px; border: 2px solid black;}
 
 td {padding:5px; font-size: 12px; border: 2px solid black; font-weight: lighter;}
 
-#logged_in_header, #logged_out_header {font-size: 11px;background-color:blue; color:yellow; width: 20%; min-width: 300px; height:30px; float:right; ;}
+#logged_in_header, #logged_out_header {font-size: 11px;background-color:blue; color:yellow; width: 20%; min-width: 300px; height:30px; float:right;}
 
 #navbar {font-size: 14px; background-color: pink; color:black; width: 100%; height: 50px; float:right; position:relative;}
 
 .center_text {color:yellow;}
 
-#items_index {position: relative;}
+#items {position: relative;}
