--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/_logged_out_header.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/_logged_out_header.html.erb
@@ -1,6 +1,5 @@
 <div id ="logged_out_header">
 
-<h1><%= link_to "Sign Up", new_user_registration_path %>
-	<%= link_to "Sign In", new_user_session_path %>
-</h1>
+<h3><%= link_to "Sign Up", new_user_registration_path %>
+	<%= link_to "Sign In", new_user_session_path %></h3>
 </div>
