good god, finally crapped out a method to show item availability.

--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/_borrowed.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/_borrowed.html.erb
@@ -8,6 +8,7 @@
 	<th>Lender Name</th>
 	<th>Lender Rating</th>
 	<th>Your Score</th>
+	<th>Approval Status</th>
 	
 
 <% @loans.each do |loan| %>
@@ -18,6 +19,7 @@
 	<td><%= loan.lender.first_name %> <%= loan.lender.second_name %></td> 
 	<td><%= loan.lender_score %> (for now)</td> 
 	<td><%= loan.lender_score %> (for now)</td> 
+	<td><em><%= loan.status %></em></td> 
 </tr>
 <% end %>
 </table>
