--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/_items_listing.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/_items_listing.html.erb
@@ -11,16 +11,18 @@
 	<th>Tags</th>
 
 <% @items.each do |item| %>
-<tr>
-	<td><%= item.name %></td> 
-	<td><%= item.description %></td> 
-	<td><%= image_tag(item.image_path, size:"100", alt:item.name, class:"item") %></td> 
-	<td><%= item.category.name %></td> 
-	<td><%= item.condition_qual %></td> 
-	<td>Location TBD</td> 
-	<td><%= item.tags %></td> 
-	<td><%= link_to "Request this item", new_item_loan_path(item.id) %></td>
-</tr>
+	<% if item.available? %>
+	<tr>
+		<td><%= item.name %></td> 
+		<td><%= item.description %></td> 
+		<td><%= image_tag(item.image_path, size:"100", alt:item.name, class:"item") %></td> 
+		<td><%= item.category.name %></td> 
+		<td><%= item.condition_qual %></td> 
+		<td>Location TBD</td> 
+		<td><%= item.tags %></td> 
+		<td><%= link_to "Request this item", new_item_loan_path(item.id) %></td>
+	</tr>
+	<% end %>
 <% end %>
 </table>
 </div>
