--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/_loaned.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/_loaned.html.erb
@@ -16,12 +16,19 @@
 <tr>
 	<td><%= loan.item.name %></td> 
 	<td><%= loan.loan_begin %></td> 
-	<td><%= loan.loan_end %></td>
+	<td><%= loan.loan_end %>
+	<% if loan.expired? %>
+			<em class = "expired">Expired</em></td>
+			<% end %>
 	<td><%= loan.borrower.first_name %> <%= loan.borrower.second_name %></td> 
 	<td><%= loan.borrower.full_address %></td> 
 	<td><%= loan.borrower_score %> (for now)</td> 
 	<td><%= loan.lender_score %> (for now)</td> 
+		<% if loan.expired? %>
+	<td class ="expired"><em>Expired</em></td>
+			<% else %>
 	<td><em><%= loan.status %></em></td> 
+			<% end %>
 </tr>
 <% end %>
 </table>
