--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/_pending_loans.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/_pending_loans.html.erb
@@ -13,7 +13,7 @@
 <% @loans.each do |loan| %>
 <tr>
 	<td><%= loan.item.name %></td> 
-	<td><%= loan.loan_begin %></td> 
+	<td><%= loan.loan_begin %></td> }
 	<td><%= loan.loan_end %></td>
 	<td><%= loan.borrower.first_name %> <%= loan.borrower.second_name %></td> 
 	<td><%= loan.borrower.full_address %></td> 
