--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/_loaned.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/_loaned.html.erb
@@ -20,7 +20,7 @@
 	<% if loan.expired? %>
 			<em class = "expired">Expired</em></td>
 			<% end %>
-	<td><%= loan.borrower.first_name %> <%= loan.borrower.second_name %></td> 
+	<td><%= loan.borrower.first_name + ' ' + loan.borrower.second_name %></td> 
 	<td><%= loan.borrower.full_address %></td> 
 	<td><%= loan.borrower_score %> (for now)</td> 
 	<td><%= loan.lender_score %> (for now)</td> 
