--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/_logged_in_header.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/_logged_in_header.html.erb
@@ -1,5 +1,8 @@
 <div id ="logged_in_header">
 Signed in as <%= current_user.email %>
+<div class = "center_text">
+Hi, <%= current_user.first_name %>!
+</div>
 
 
 <%=link_to "Edit Profile", edit_user_registration_path %>
