--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/_logged_in_header.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/_logged_in_header.html.erb
@@ -1,10 +1,11 @@
 <div id ="logged_in_header">
 Signed in as <%= current_user.email %>
-<div class = "center_text">
-Hi, <%= current_user.first_name %>!
-</div>
+	<div class = "center_text float-left">
+	<h4>Hi, <%= current_user.first_name %>!
+	</div></h4>
 
-
+	<div>
 <%=link_to "Edit Profile", edit_user_registration_path %>
 <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+	</div>
 </div>
