--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css
@@ -18,7 +18,7 @@ body {background-color: purple; color: white; font-family: Helvetica;}
 
 a {color:white;}
 
-table, tr {border: 2px solid black; font-family: 'Helvetica-Light'; font-size: 14px;}
+table, tr {border: 0px solid black; font-family: 'Helvetica-Light'; font-size: 14px;}
 
 th {padding: 20px; font-size: 14px; border: 2px solid black;}
 
@@ -30,7 +30,11 @@ td {padding:5px; font-size: 12px; border: 2px solid black; font-weight: lighter;
 
 #navbar {font-size: 35px; background-color: pink; color:black; width: 100%; height: 50px; position:relative; margin: 5% 0px 5% 0px; display:inline-block; text-align: center}
 
+#my_items {border: 0px solid black; font-family: 'Helvetica-Light'; font-size: 14px !important;}
+
 .center_text {  margin-left:auto; margin-right:auto; }
+
+.large_text {font-size: 16px;}
 
 .padded_text { margin-left:auto; margin-right:auto; padding: 0px 5% 0px 5%; position:relative; display:inline-block;}
 
