--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css
@@ -28,7 +28,7 @@ td {padding:5px; font-size: 12px; border: 2px solid black; font-weight: lighter;
 
 #logged_in_header, #logged_out_header {font-size: 11px;background-color:blue; color:yellow; width: 20%; min-width: 300px; height:30px; float:right;}
 
-#navbar {font-size: 35px; background-color: pink; color:black; width: 100%; height: 50px; position:relative; margin: 5% 0px 5% 0px; display:inline-block; text-align: center}
+#navbar {font-size: 35px; background-color: pink; color:black; width: 100%; height: 50px; position:relative; margin: 5% 0px 5% 0px; display:inline-block; text-align: center; min-width: 900px;}
 
 #my_items {border: 0px solid black; font-family: 'Helvetica-Light'; font-size: 14px !important;}
 
@@ -41,3 +41,5 @@ td {padding:5px; font-size: 12px; border: 2px solid black; font-weight: lighter;
 .float-left { float: left;}
 
 #items {position: relative;}
+
+.listing { position:relative; display: inline-block;}
