--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css
@@ -28,7 +28,9 @@ td {padding:5px; font-size: 12px; border: 2px solid black; font-weight: lighter;
 
 #logged_in_header, #logged_out_header {font-size: 11px;background-color:blue; color:yellow; width: 20%; min-width: 300px; height:30px; float:right;}
 
-#navbar {font-size: 35px; background-color: pink; color:black; width: 100%; height: 50px; position:relative; margin: 5% 0px 5% 0px; display:inline-block; text-align: center; min-width: 900px;}
+#navbar {font-size: 35px; background-color: pink; color:black; width: 100%; height: 50px; position:relative; margin: 2% 0px 2% 0px; display:inline-block; text-align: center; min-width: 900px;}
+
+#pending_items { font-size: 20px; font-style: italic; display: inline-block; position:relative;}
 
 #my_items {border: 0px solid black; font-family: 'Helvetica-Light'; font-size: 14px !important;}
 
@@ -36,7 +38,7 @@ td {padding:5px; font-size: 12px; border: 2px solid black; font-weight: lighter;
 
 .large_text {font-size: 16px;}
 
-.padded_text { margin-left:auto; margin-right:auto; padding: 0px 5% 0px 5%; position:relative; display:inline-block;}
+.padded_text { margin-left:auto; margin-right:auto; padding: 0px 2% 0px 2%; position:relative; display:inline-block;}
 
 .float-left { float: left;}
 
