--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/_navbar.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/_navbar.html.erb
@@ -7,11 +7,11 @@
 	 <%= link_to "Home", root_path %>  </div>
 	 	<div class = padded_text>
 	<%= link_to "My Items", items_path({user_id: current_user.id}) %></div>
-<div class = "padded_text">
+<div id ="pending_items">
 	 <% pending_count = current_user.pending_loan_count %>
 	 <% if pending_count > 0 %>
 
-	 <%= link_to "Pending loan requests (#{pending_count})" , loans_path({category:"pending"}) %>
+	 <%= link_to "New loan requests (#{pending_count})" , loans_path({category:"pending"}) %>
 	 <% end %>
 	</div>
 </div>
