--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/_items_listing.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/_items_listing.html.erb
@@ -6,16 +6,8 @@
 Enter your postal code to search for items nearby.
 
 </h2>
-
-
-
-
 <p>
-
-
-
 <br><p>Here are the newest items which have been created. <br>Enter a search term and your zipcode to find items you can borrow nearby.
-
 
 <table id = "items">
 	<th>Item Name</th>
@@ -34,7 +26,7 @@ Enter your postal code to search for items nearby.
 		<td><%= image_tag(item.image_path, size:"100", alt:item.name, class:"item") %></td> 
 		<td><%= item.category.name %></td> 
 		<td><%= item.condition_qual %></td> 
-		<td>Location TBD</td> 
+		<td><%= item.user.full_address %></td> 
 		<td><%= item.tags %></td> 
 		<td><%= link_to "Request this item", new_item_loan_path(item.id) %></td>
 	</tr>
