--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/_my_items_listing.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/_my_items_listing.html.erb
@@ -8,7 +8,7 @@
 
 <% else %>
 
-<h1> Here are the items you own:<h2>
+<h1>View items below or <%= link_to "Create a new item", new_item_path %><h2>
 
 <table id = "items">
 	<th>Item Name</th>
@@ -29,6 +29,7 @@
 		<td><%= item.condition_qual %></td> 
 		<td>$<%= item.value %></td> 
 		<td><%= item.tags %></td> 
+		<td><%= link_to "Edit Item", edit_item_path(item) %></td> 
 	
 	</tr>
 	<% end %>
