--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/layouts/application.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/layouts/application.html.erb
@@ -7,10 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
+
 
 <div class="container">
+<div id ="logo"><%= link_to "Borrow.it", :root %><br><em style="font-size: 10px;">An App For Borrowing...itEms</em></div>
 <div style ="text-align:right">
 <% if user_signed_in? %>
 
@@ -25,6 +25,13 @@
 
 <% end %>
 
+</div>
+  <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
+       <div class ="error">
+  <% flash.each do |name, msg| -%>
+      <%= content_tag :div, msg, class: name %>
+    <% end -%>
 </div>
 <%= yield %>
 </div>
