--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/edit.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/edit.html.erb
@@ -27,9 +27,8 @@
     <%= f.text_field :image_path, size: 100 %>
   </div>
 <%= f.submit %>
-<% end %>
-
-
-
+<% end %><br><%= button_to "Delete Listing", { action: "destroy", id: @item.id },
+                                method: :delete, data: { confirm: "Are you sure you want to delete \"#{@item.name}\"?" } %>
 
 </ul>
+
