--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/layouts/application.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
   <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
        <div class ="error">
-  <% flash.each do |name, msg| -%>
+    <% flash[:errors] && flash[:errors].each do |name, msg| -%>
       <%= content_tag :div, msg, class: name %>
     <% end -%>
 </div>
