--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/items.css.scss
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/items.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the Items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+#pending_items { font-size: 20px; font-style: italic; display: inline-block; position:relative;}
+
+#my_items {border: 0px solid black; font-family: 'Helvetica-Light'; font-size: 14px !important;}
