--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css.scss
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css.scss
@@ -18,17 +18,7 @@
 @import 'bootstrap';
 
 
-body {background: -webkit-linear-gradient(-52.35237935989238deg, blue 0, red 0, yellow 2%, green 100%), url("small_steps.png");
-background: -moz-linear-gradient(142.35237935989238deg, blue 0, red 0, yellow 2%, green 100%), url("small_steps.png");
-background: linear-gradient(142.35237935989238deg, blue 0, red 0, yellow 2%, green 100%), url("small_steps.png");
-background-repeat: repeat, repeat-x;
-background-position: 50% 50%;
--webkit-background-origin: padding-box;
-background-origin: padding-box;
--webkit-background-clip: border-box;
-background-clip: border-box;
--webkit-background-size: auto auto;
-background-size: auto auto; color: white; font-family: "Futura", "Avenir Medium", "Calibri", "Consolas"; text-shadow: 1px 1px #000;}
+body {font-family: "Futura", "Avenir Medium", "Calibri", "Consolas"; text-shadow: 1px 1px #000; color:white;}
 
 a {color:white;}
 
@@ -40,11 +30,13 @@ td {padding:5px; font-size: 12px; border: 2px solid black; font-weight: lighter;
 
 .active {background-color:yellow; height: 100%;}
 
+.container {background: rgba(0,0,0,0.8);}
+
 .expired {background-color:red;}
 
 #logged_in_header, #logged_out_header {font-size: 11px;background-color:blue; color:yellow; width: 20%; min-width: 300px; height:30px; float:right;}
 
-#navbar {font-size: 35px; background-color: navy; color:black; width: 100%; height: 100px; position:relative; margin: 2% 0px 2% 0px; display:inline-block; text-align: center; min-width: 900px;}
+#navbar {font-size: 35px; background-color: navy; color:black; width: 100%; height: 100px; position:relative; margin: 2% 0px 2% 0px; display:inline-block; text-align: center; min-width: 450px;}
 
 .center_text {  margin-left:auto; margin-right:auto; }
 
@@ -57,6 +49,8 @@ td {padding:5px; font-size: 12px; border: 2px solid black; font-weight: lighter;
 #items {position: relative;}
 
 .listing { position:relative; display: inline-block;}
+
+.form {font-color:black;}
 
 #logo { font-size: 24px;}
 
