--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/_navbar.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/_navbar.html.erb
@@ -36,7 +36,7 @@
       </form>
  -->      <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "My Loans", loans_path, class: cp(loans_path) %></li>
-        <li><%= link_to "My Items", items_path({user_id: current_user.id}), class: cp(loans_path) %></li>
+        <li><%= link_to "My Items", items_path({user_id: current_user.id}), class: cp(items_path) %></li>
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
