--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/new.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/new.html.erb
@@ -1,3 +1,4 @@
+<div id ="item_new"class ="form">
 <h1> Hey bro, make a new item:</h2>
 
 <%= form_for @item do |f| %>
@@ -27,6 +28,6 @@
   </div>
 <%= f.submit %>
 <% end %>
-
+</div>
 
 
