--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/show.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/show.html.erb
@@ -4,6 +4,6 @@
 	<li><%= image_tag(@item.image_path, size:"100", alt:@item.name, class:"item") %></li> 
 	<li>Category: <%= @item.category.name %></li> 
 	<li>Condition: <%= @item.condition_qual %></li> 
-	<li>Location TBD</li> 
+	<li>Location: <%= @item.user.full_address %></li> 
 	<li>Tags: <%= @item.tags %></li>
 </ul>
