--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/_loaned.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/_loaned.html.erb
@@ -24,8 +24,8 @@ No one has requested any of your items!  Make more stuff!
 <% @loans.each do |loan| %>
 <tr>
 	<td><%= loan.item ? loan.item.name : "Item Deleted" %></td> 
-	<td><%= loan.loan_begin %></td> 
-	<td><%= loan.loan_end %>
+	<td><%= loan.loan_begin.strftime("%a, %b %d, %Y %I:%M%p") %></td> 
+	<td><%= loan.loan_end.strftime("%a, %b %d, %Y %I:%M%p") %>
 	<% if loan.expired? %>
 			<em class = "expired">Expired</em></td>
 			<% end %>
