--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/show.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Here is your loan info, bud.</h1>
+<h1>Here is your loan request information:</h1>
 <ul>
 
 <li>You have requested to borrow "<%= @loan.item.name %>"</li>
