--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css.scss
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css.scss
@@ -30,13 +30,15 @@ td {padding:5px; font-size: 12px; border: 2px solid black; font-weight: lighter;
 
 .active {background-color:yellow; height: 100%;}
 
-.container {background: rgba(0,0,0,0.8);}
+.container {background: rgba(0,0,0,0.75); border-radius: 5px;}
 
 .expired {background-color:red;}
 
-#logged_in_header, #logged_out_header {font-size: 11px;background-color:blue; color:yellow; width: 20%; min-width: 300px; height:30px; float:right;}
+#logged_in_header, #logged_out_header {font-size: 11px;background-color:transparent; color:yellow; width: 25%; min-width: 350px; height:40px; padding: 2% 2% 2% 2%; float:right; border-radius: 5px; opacity: 0.9;}
 
 #navbar {font-size: 35px; background-color: navy; color:black; width: 100%; height: 100px; position:relative; margin: 2% 0px 2% 0px; display:inline-block; text-align: center; min-width: 450px;}
+
+.container-fluid { height:100;}
 
 .center_text {  margin-left:auto; margin-right:auto; }
 
@@ -59,4 +61,18 @@ td {padding:5px; font-size: 12px; border: 2px solid black; font-weight: lighter;
 .error { color:red; font-style: italic}
 
 
+
+.table {
+	display: table;   /* Allow the centering to work */
+	margin: 0 auto;
+}
+
+ul#horizontal-list {
+	list-style: none;
+	margin: 0 5% 0 5%;
+	}
+	ul#horizontal-list li {
+		display: inline;
+		padding: 3%;
+	}
 
