other css tweaks before bedtime

--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/_logged_out_header.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/_logged_out_header.html.erb
@@ -1,5 +1,5 @@
 <div id ="logged_out_header">
 
-<h5><%= link_to "Sign Up", new_user_registration_path %>
-	<%= link_to "Sign In", new_user_session_path %></h5>
+<strong style="font-size: 20px;"><%= link_to "Sign Up", new_user_registration_path %>&nbsp&nbsp&nbsp&nbsp
+	<%= link_to "Sign In", new_user_session_path %></strong>
 </div>
