--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css.scss
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css.scss
@@ -28,15 +28,15 @@ th {padding: 20px; font-size: 14px; border: 2px solid black;}
 
 td {padding:5px; font-size: 12px; border: 2px solid black; font-weight: lighter;}
 
-.active {background-color:yellow; height: 100%;}
+.active {color: yellow; height: 100%;}
 
 .container {background: rgba(0,0,0,0.75); border-radius: 5px;}
 
 .expired {background-color:red;}
 
-#logged_in_header, #logged_out_header {font-size: 11px;background-color:transparent; color:yellow; width: 25%; min-width: 350px; height:40px; padding: 2% 2% 2% 2%; float:right; border-radius: 5px; opacity: 0.9;}
+#logged_in_header, #logged_out_header {font-size: 11px; background-color:#333; color:yellow; width: 25%; min-width: 350px; height:40px; padding: 5px 5px 5px 5px; float:right; border-radius: 5px; opacity: 0.9; text-align: center}
 
-#navbar {font-size: 35px; background-color: navy; color:black; width: 100%; height: 100px; position:relative; margin: 2% 0px 2% 0px; display:inline-block; text-align: center; min-width: 450px;}
+#navbar {font-size: 45px; background-color: navy; width: 100%; height: 100px; position:relative; margin: 2% 0px 2% 0px; display:inline-block; min-width: 450px;}
 
 .container-fluid { height:100;}
 
@@ -60,7 +60,9 @@ td {padding:5px; font-size: 12px; border: 2px solid black; font-weight: lighter;
 
 .error { color:red; font-style: italic}
 
+.notice {font-size: 24px; color:yellow;}
 
+input, button {color:black; border-radius: 4px;}
 
 .table {
 	display: table;   /* Allow the centering to work */
