--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/_pending.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/_pending.html.erb
@@ -13,8 +13,8 @@
 <% @loans.each do |loan| %>
 <tr>
 	<td><%= loan.item.name %></td> 
-	<td><%= loan.loan_begin %></td>
-	<td><%= loan.loan_end %></td>
+	<td><%= loan.loan_begin.strftime("%a, %b %d, %Y %I:%M%p") %></td>
+	<td><%= loan.loan_end.strftime("%a, %b %d, %Y %I:%M%p") %></td>
 	<td><%= loan.borrower.first_name %> <%= loan.borrower.second_name %></td> 
 	<td><%= loan.borrower.full_address %></td> 
 	<td><%= loan.borrower_score %> (for now)</td> 
