dammit, also updated badge on pending loan requests

--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css.scss
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css.scss
@@ -62,6 +62,8 @@ td {padding:5px; font-size: 12px; border: 2px solid black; font-weight: lighter;
 
 .notice {font-size: 24px; color:yellow;}
 
+.badge {font-size: 18px; background-color: orange;}
+
 input, button {color:black; border-radius: 4px;}
 
 .table {
