--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/_navbar.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/_navbar.html.erb
@@ -51,7 +51,7 @@
 	 <% pending_count = current_user.pending_loan_count %>
 	 <% if pending_count > 0 %>
 
-	 <%= link_to "New loan requests (#{pending_count})" , loans_path({category:"pending"}) %>
+	 <%= link_to "New loan requests" , loans_path({category:"pending"}) %> <span class="badge"> <%= link_to "#{current_user.pending_loan_count}" , loans_path({category:"pending"}) %></span>
 	 <% end %>
 	</li>
       </ul>
