more css tweaks, worked on forms a bit.  set navbar to absolute positioning

--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/devise/registrations/new.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div id = "signup">
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -35,8 +36,8 @@
 
   <div><%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+<p class ="padding_bottom">
 
-  <div><%= f.submit "Sign up" %></div>
+  <div><%= f.submit "Sign up" %></div><%= render "devise/shared/links" %>
 <% end %>
-
-<%= render "devise/shared/links" %>
+</div>
