--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/layouts/application.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/layouts/application.html.erb
@@ -25,8 +25,9 @@
 <%= render '/navbar' %>
 
 <% else %>
-
+<div id ="logo"><%= link_to "Borrow.it", :root %><br><em style="font-size: 10px;">An App For Borrowing...itEms</em></div>
 <%= render '/logged_out_header' %>
+<p style ="padding-bottom: 10%;">
 <% end %>
 
 </div>
