--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/_navbar.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/_navbar.html.erb
@@ -1,63 +1,25 @@
-<nav id = "navbar" class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> --><!-- 
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button> -->
-      <div class="navbar-brand"><div id ="logo"><%= link_to "Borrow.it", :root %><br><em style="font-size: 10px;">An App For Borrowing...itEms</em></div></div>
-    </div>
+<div id "navbar_container">
+	<nav id = "navbar" class="navbar navbar-default" role="navigation">
+		<div id ="logo"><%= link_to "Borrow.it", :root %><br><em style="font-size: 10px;">An App For Borrowing...itEms</em></div>
+		<div class ="table">
+	      <ul id ="horizontal-list">
+	        <li><%= link_to "Home", root_path, class: cp(root_path) %></li>
+	        <li><%= link_to "My Loans", loans_path, class: cp(loans_path) %></li>
+	        <li><%= link_to "My Items", items_path({user_id: current_user.id}), class: cp(items_path) %></li>
+	       
+	        <li id ="pending_items">
+		 <% pending_count = current_user.pending_loan_count %>
+		 <% if pending_count > 0 %>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class ="table">
-      <ul id ="horizontal-list">
-        <li><%= link_to "Home", root_path, class: cp(root_path) %></li>
-<!--         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
- --> 
-        <li><%= link_to "My Loans", loans_path, class: cp(loans_path) %></li>
-        <li><%= link_to "My Items", items_path({user_id: current_user.id}), class: cp(items_path) %></li>
-        <!-- <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li> -->
-        <li id ="pending_items">
-	 <% pending_count = current_user.pending_loan_count %>
-	 <% if pending_count > 0 %>
-
-	 <%= link_to "New loan requests" , loans_path({category:"pending"}) %> <span class="badge"> <%= link_to "#{current_user.pending_loan_count}" , loans_path({category:"pending"}) %></span>
-	 <% end %>
-	</li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
+		 <%= link_to "New loan requests" , loans_path({category:"pending"}) %> <span class="badge"> <%= link_to "#{current_user.pending_loan_count}" , loans_path({category:"pending"}) %></span>
+		 <% end %>
+		</li>
+	      </ul>
+	    </div>
+	  
+	  
+	      
+	</nav>
+</div>
 	
 
